# envoy-sni-dynamic-forwarding

./: README.md  generate-cert.sh  go.mod  go.sum  run-test
cmd/: main.go
config/: envoy-sni-dynamic-forwarding.yaml  nginx.conf  wasm_only.yaml
http-server/: main.go
pkg/server/: server.go
wasm-plugin/: Makefile  go.mod  go.sum  main.go  tcp-plugin.wasm
wasm-plugin-1/: Cargo.toml  README.md  build.rs
wasm-plugin-1/src/: lib.rs
