[package]
publish = false
name = "proxy-wasm-example-grpc-auth-random"
version = "0.0.1"
description = "Proxy-Wasm plugin example: gRPC auth (random)"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
prost = "0.14.1"
proxy-wasm = { git = "https://github.com/proxy-wasm/proxy-wasm-rust-sdk.git", rev = "ba23ab4" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[build-dependencies]
prost-build = "0.14.1"
